# stm32l011k4-bare-metal

./: CMakeLists.txt  Makefile  ls.ld  personnal_notes.md  readme.md  stm32l011k4_startup.c  toolchain-arm-none-eabi.cmake
include/: sfunc.h
src/: main.c  sfunc.s  stm32l011k4_startup.c
